kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - rook.mcgrath.nz
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
